# napari-assistant

./: .gitignore  LICENSE  MANIFEST.in  README.md  deploy.bat  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
comparing functions tests/: Untitled.ipynb
docs/: Re-Making loading with new GUI.ipynb  test_.yaml  test_long_wf.yaml  test_only_blur.yaml  test_with_combine_function.yaml  testing error with subtract background-inspecting the function to see whats wrong.ipynb  testing error with subtract background.ipynb  testing loading with new gui - debugging initialise root funcs.ipynb  testing loading with new gui - long wf.ipynb  testing loading with new gui-signature experimentation.ipynb  testing loading with new gui.ipynb
napari_assistant/: __init__.py  __main__.py  _categories.py  _jupyter_utils.py  _napari_plugin.py  _plugin_generator.py  _undo_redo.py  _viewer.py  _workflow_io_utility.py
napari_assistant/_gui/: _Assistant.py  _button_grid.py  _category_widget.py
napari_assistant/_tests/: test_dock_widget.py
next step suggestion tests/: test_workflow_2.yaml  testing_next_steps_for_loaded_workflow_widgets.ipynb
tests/: test_collecting.py  test_dock_widget.py
tests/next step suggestion tests/: Initial testing.ipynb  test_workflow.yaml  testing_next_steps_for_assistant_widgets.ipynb
tests/workflow undo testing/: Undo and Redo category widgets - testing functionality.ipynb  Undo with category widgets.ipynb  testing with 4D data.ipynb
workflow undo testing/: Deleting workflow widgets and layers.ipynb  Saving a workflow state - debugging.ipynb  Saving a workflow state and reloading it after deleting layers and widgets.ipynb  Saving a workflow state and reloading it after deleting layers-Copy1.ipynb  Saving a workflow state and reloading it after deleting layers.ipynb  Saving a workflow state and reloading it.ipynb  Undo and Redo category widgets - testing functionality.ipynb  Undo with category widgets- testing button.ipynb  Undo with category widgets.ipynb  deleting layers debugging.ipynb  loading a saved workflow state.ipynb  saved_from_viewer.yaml  test.yaml  testing with 4D data.ipynb  workflow_changed.yaml
