# setup.cfg
[metadata]
url = https://github.com/haesleinhuepf/napari-assistant/
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-assistant/issues
    Documentation = https://github.com/haesleinhuepf/napari-assistant/
    Source Code = https://github.com/haesleinhuepf/napari-assistant
    User Support = https://forum.image.sc/
classifiers =
    Framework :: napari
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis

[options.entry_points]
napari.plugin =
    napari-assistant = napari_assistant._napari_plugin

console_scripts =
    naparia = napari_assistant:main


