# setup.cfg
[metadata]
name = napari-assistant
version = 0.4.2
author = Robert Haase, Ryan Savill
author_email = robert.haase@tu-dresden.de
description = A pocket calculator like interface to image processing in napari
url = https://github.com/haesleinhuepf/napari-assistant/
license = BSD-3-Clause

project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-assistant/issues
    Documentation = https://github.com/haesleinhuepf/napari-assistant/
    Source Code = https://github.com/haesleinhuepf/napari-assistant
    User Support = https://forum.image.sc/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: napari
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    napari-plugin-engine>=0.1.4
    toolz
    napari >=0.4.14
    magicgui
    numpy!=1.19.4
    pyperclip
    loguru
    jupytext
    jupyter
    pandas
    napari-time-slicer>=0.4.8
    napari-workflows>=0.2.4


[options.entry_points]
napari.plugin =
    napari-assistant = napari_assistant._napari_plugin

console_scripts =
    naparia = napari_assistant:main


